--- a/kra-awa-dev/aw-budgetversions.html
+++ b/kra-awa-dev/aw-budgetversions.html
@@ -596,7 +596,7 @@
               </tr>
             </table>
             <!-- Panel Content Div -->
-            <div class="tab-container" align="center" id="G300b" style="display: nonee;">
+            <div class="tab-container" align="center" id="G300b" style="display: none;">
               <!-- Personnel -->
               <div class="h2-container">
                 <h2><span class="subhead-left">Personnel</span></h2>
