https://test.kuali.org/jira/browse/KRAFUNC-221
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6644 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money-singlenode.html
+++ b/kra-awa-dev/aw-time-money-singlenode.html
@@ -408,8 +408,8 @@
                 
                 <table align="center" cellpAdding="0" cellspacing="0">
                     <tr>
-                        <td colspan="3" style="text-align:left; background-color:#C3C3C3; font-weight:bold;">
-                        	&nbsp;
+                        <td colspan="3" style="text-align:left; background-color:#C3C3C3; font-weight:bold;">&nbsp;
+                        	
                         </td>
                         <td style="text-align:center; background-color:#C3C3C3; font-weight:bold; width:170px;">
                             <input type="radio" class="nobord" name="when01" value="0" checked="checked" />current
@@ -553,7 +553,7 @@
 	<!-- Panel Tab Header --> 
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Direct/F&amp;A Funds Distribution (000121-005)</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Direct/F&amp;A Funds Distribution (000121)</td>
                 <td class="tabtable2-mid"><a href="#" id="A301" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F301" vspace=6></a></td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -568,7 +568,7 @@
 	<!-- Panel Tab Header -->  
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary (000121-005)</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary (000121)</td>
                 <td class="tabtable2-mid"><a href="#" id="A22" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F22" ></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -583,7 +583,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Action Summary (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Action Summary (000121)</td>
                 <td class="tabtable2-mid"><a href="#" id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -598,7 +598,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">History (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">History (000121)</td>
                 <td class="tabtable2-mid"><a href="#" id="A025" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F025" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -613,7 +613,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ad Hoc Recipients (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ad Hoc Recipients (000121)</td>
                 <td class="tabtable2-mid"><a href="#" id="A10" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F10" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -627,7 +627,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Route Log (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Route Log (000121)</td>
                 <td class="tabtable2-mid"><a href="#" id="A11" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F11" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
