https://test.kuali.org/jira/browse/KRAFUNC-214
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6645 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -5545,7 +5545,7 @@
                             <td colspan="2" style="padding-top:0px; padding-bottom:0px; padding-left:0px; padding-right:0px; border-left:none; border-collapse:collapse;">
                     
                                 <!-- Scrollable DIV -->
-                                    <div style="height:185px; overflow-y:scroll; overflow-x:hidden; background-color:#E4E4E4;">
+                                    <div style="height:240px; overflow-y:auto; overflow-x:hidden; background-color:#E4E4E4; padding-right:12px">
                 
                                         <!--  Award Version 1 -->
                                             <table width="100%" cellpadding="0" cellspacing="0" style="width:100%; border-top:none;">
@@ -5629,8 +5629,7 @@
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Cumulative
-                                                                </th>
-                                                                <th style="border-collapse:collapse; color:#333333;" class="fineprint">
+                                                                </th> <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Distributable
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
@@ -5640,7 +5639,7 @@
                                                                     Anticipated Cumulative
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
-                                                                    Obligated Distributable
+                                                                    Anticipated Distributable
                                                                 </th>
                                                             </tr>
                                                             <tr>
@@ -5819,8 +5818,7 @@
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Cumulative
-                                                                </th>
-                                                                <th style="border-collapse:collapse; color:#333333;" class="fineprint">
+                                                                </th> <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Distributable
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
@@ -5830,7 +5828,7 @@
                                                                     Anticipated Cumulative
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
-                                                                    Obligated Distributable
+                                                                    Anticipated Distributable
                                                                 </th>
                                                             </tr>
                                                             <tr>
@@ -6035,8 +6033,7 @@
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Cumulative
-                                                                </th>
-                                                                <th style="border-collapse:collapse; color:#333333;" class="fineprint">
+                                                                </th> <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Distributable
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
@@ -6046,7 +6043,7 @@
                                                                     Anticipated Cumulative
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
-                                                                    Obligated Distributable
+                                                                    Anticipated Distributable
                                                                 </th>
                                                             </tr>
                                                             <tr>
