--- a/kra-awa-dev/aw-time-money-viewhist.html
+++ b/kra-awa-dev/aw-time-money-viewhist.html
@@ -528,8 +528,7 @@
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Cumulative
-                                                                </th>
-                                                                <th style="border-collapse:collapse; color:#333333;" class="fineprint">
+                                                                </th> <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Distributable
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
@@ -539,7 +538,7 @@
                                                                     Anticipated Cumulative
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
-                                                                    Obligated Distributable
+                                                                    Anticipated Distributable
                                                                 </th>
                                                             </tr>
                                                             <tr>
@@ -718,8 +717,7 @@
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Cumulative
-                                                                </th>
-                                                                <th style="border-collapse:collapse; color:#333333;" class="fineprint">
+                                                                </th> <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Distributable
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
@@ -729,7 +727,7 @@
                                                                     Anticipated Cumulative
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
-                                                                    Obligated Distributable
+                                                                    Anticipated Distributable
                                                                 </th>
                                                             </tr>
                                                             <tr>
@@ -934,8 +932,7 @@
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Cumulative
-                                                                </th>
-                                                                <th style="border-collapse:collapse; color:#333333;" class="fineprint">
+                                                                </th> <th style="border-collapse:collapse; color:#333333;" class="fineprint">
                                                                     Obligated Distributable
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
@@ -945,7 +942,7 @@
                                                                     Anticipated Cumulative
                                                                 </th>
                                                                 <th style="border-collapse:collapse; color:#333333;" class="fineprint">
-                                                                    Obligated Distributable
+                                                                    Anticipated Distributable
                                                                 </th>
                                                             </tr>
                                                             <tr>
