git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6646 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -5520,7 +5520,7 @@
             </tr>
         </table>
 	<!-- Panel Content Div -->
-		<div class="tab-container" align="center" id="G025" style="display: none;"> 
+		<div class="tab-container" align="center" id="G025" style="display: nonee;"> 
 		<!-- Panel Element: View History -->
         	<!-- Element Header: View History -->
                 <div class="h2-container">
@@ -5555,8 +5555,9 @@
                                                     </th>
                                                     <th colspan="10" style="text-align:left; padding-left:5px;">
                                                         Award Version 1:
-                                                        <span style="font-weight:normal;">notice date 01/03/2007, updated 01/28/2007 04:40:41 PM, Susan Mundt</span>
-                                                    </th>
+                                                        <span style="font-weight:normal;">New: notice date 01/01/2007, updated 01/28/2007 04:40:41, Susan Mundt </span>
+                                                    <br>
+                                                    <span class="fineprint" style="font-weight:normal">Ut ac mauris quis mi lobortis feugiat. Praesent blandit tellus magna. Maecenas vitae massa at orci pellentesque imperdiet. Donec ipsum ...</span></th>
                                                 </tr>
                                             </table>
                                         
