git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6647 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -5520,7 +5520,7 @@
             </tr>
         </table>
 	<!-- Panel Content Div -->
-		<div class="tab-container" align="center" id="G025" style="display: nonee;"> 
+		<div class="tab-container" align="center" id="G025" style="display: none;"> 
 		<!-- Panel Element: View History -->
         	<!-- Element Header: View History -->
                 <div class="h2-container">
