https://test.kuali.org/jira/browse/KRAFUNC-225
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6648 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-parameters.html
+++ b/kra-awa-dev/abud-parameters.html
@@ -102,7 +102,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div id="workarea">
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Budget Overview</td>
+              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Award Overview (000121-005) </td>
               <td class="tabtable1-mid"><span class="tabtable2-mid"><a href="#" id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a></span> </td>
               <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -113,73 +113,30 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <!-- Panel Element: Budget -->
               <!-- Element Header: Budget -->
               <div class="h2-container">
-                <h2><span class="subhead-left">Budget Overview</span></h2>
-                <span class="subhead-right"> <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a> </span> </div>
+                <h2><span class="subhead-left"><span class="tabtable1-left">Award</span> Overview</span></h2>
+              <span class="subhead-right"> <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a> </span> </div>
               <!-- Element Content: Budget -->
               <table cellpadding=0 cellspacing="0"  summary="">
                 <tr>
-                  <th style="text-align:right;">Account ID:</th>
+                  <th style="text-align:right;">Account:</th>
                   <td>400100</td>
-                  <th style="text-align:right;">Budget Version:</th>
-                  <td>1</td>
+                  <th style="text-align:right;"> On/Off Campus:</th>
+                  <td>on</td>
                 </tr>
                 <tr>
-                  <th style="text-align:right;">Award ID:</th>
-                  <td>000216-001</td>
-                  <th style="text-align:right;">Budget Type:</th>
-                  <td>new</td>
+                  <th style="text-align:right;">Project Start Date:</th>
+                  <td>01/01/2009</td>
+                  <th style="text-align:right;">F&amp;A Rate Type:</th>
+                  <td>MTDC</td>
                 </tr>
                 <tr>
-                  <th style="text-align:right;">Award Version:</th>
-                  <td>1</td>
-                  <th style="text-align:right;">Budget Status:</th>
-                  <td>submitted</td>
-                </tr>
-                <tr>
-                  <th style="text-align:right;">On/Off Campus:</th>
-                  <td><select>
-                      <option value="0" selected="selected">select</option>
-                      <option value="1">all on</option>
-                      <option value="2">all off</option>
-                    </select></td>
-                  <th style="text-align:right;">F&A Rate Type</th>
-                  <td><select>
-                      <option value="0" selected="selected">select</option>
-                      <option value="1">MTDC</option>
-                      <option value="2">TDC</option>
-                      <option value="3">TC</option>
-                      <option value="4">S&amp;W</option>
-                      <option value="5">Other</option>
-                      <option value="6">None</option>
-                    </select></td>
-                </tr>
-                <tr>
-                  <th style="text-align:right;">Budget Start Date:</th>
-                  <td>12/15/2008</td>
-                  <th style="text-align:right;">Obligated Total</th>
-                  <td style="text-align:right; padding-right:10px;">$100,000.00</td>
-                </tr>
-                <tr>
-                  <th style="text-align:right;">Budget End Date:</th>
-                  <td>12/14/2009</td>
-                  <th style="text-align:right;">Budget Change Amount</th>
-                  <td style="text-align:right; padding-right:10px;">$15,000.00</td>
-                </tr>
-                <tr>
-                  <th style="text-align:right;">Description:</th>
-                  <td colspan="3"><input type="text" style="width:99%;" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit." /></td>
-                </tr>
-                <tr>
-                  <th style="text-align:right;">Comments:</th>
-                  <td colspan="3"><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
-                      <tr>
-                        <td style="border:none;"><textarea style="width:100%; text-align:left;" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sem. Fusce pharetra. Morbi iaculis dictum est. Aliquam erat volutpat. Phasellus eleifend vehicula magna. Vivamus aliquet turpis nec leo. Quisque lacus. Sed diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec turpis tellus, sagittis eu, vehicula ut, dictum ut, ligula. Ut a nisl. In vel lorem et nibh euismod bibendum. Etiam in nisl ut erat mollis bibendum. Mauris accumsan commodo diam. Maecenas consectetur, risus ut auctor aliquam, felis turpis fermentum sem, ac adipiscing nulla sem sed urna. Proin tristique. Sed iaculis. </textarea></td>
-                        <td style="border:none; width:20px; vertical-align:bottom;"><input src="../images/pencil_add.png" onclick="javascript: alert('This would open an expanded text area dialog.'); return false" class="tinybutton" alt="Expanded Text Area" type="image" /></td>
-                      </tr>
-                    </table></td>
+                  <th style="text-align:right;">Project End Date:</th>
+                  <td>12/31/2013</td>
+                  <th style="text-align:right;"> Obligated Total:</th>
+                  <td>100,000.00</td>
                 </tr>
               </table>
-              <br />
+<br />
               <!-- Panel Element: Budget -->
               <!-- Element Header: Budget -->
               <div class="h2-container">
@@ -413,7 +370,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Budget Periods &amp; Totals</td>
+              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Budget Periods &amp; Totals (000121-005) </td>
               <td class="tabtable2-mid"><a href="#" id="A125" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F125" ></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
