--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -603,8 +603,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <!-- Sponsor -->
             <table cellpAdding=0 cellspacing=0 summary="">
               <tr>
-                <td colspan="4" class="tab-subhead1"><a href="#" id="ABFN" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN" /></a> Sponsor</td>
-              </tr>
+                <td colspan="4" class="tab-subhead1"><a href="#" id="A53" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="F53" /></a> Sponsor</td>
+              </tr>   <tbody id="G53" style="display:none">
               <tr>
                 <th> <div align=right>
                     <label for="label7">*Sponsor:</label>
@@ -683,8 +683,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <div style="padding-left:56px">
               <table cellpadding=0 cellspacing=0 summary="" style="width:100%">
                 <tr>
-                  <td colspan="3" class="tab-subhead1"><a href="#" id="ABFN3" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN3" /></a> Sponsor Funding Transferred </td>
-                </tr>
+                  <td colspan="3" class="tab-subhead1"><a href="#" id="A53h" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="F53h" /></a> Sponsor Funding Transferred </td>
+                </tr><tbody id="G53h" style="display:none">
                 <tr>
                   <th style="text-align:center;">&nbsp; </th>
                   <th style="text-align:center;"> <b>ID/Description</b> </th>
@@ -707,17 +707,17 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th> 2 </th>
                   <td> 003839 : National Eye Institute </td>
                   <td style="text-align:center;"><input name="image2312" type="image" class="nobord" src="../images/tinybutton-delete1.gif" alt="delete"></td>
-                </tr>
+                </tr></tbody>
               </table>
             </div></td>
-              </tr>
+              </tr></tbody>
             </table>
        
             <!-- Dates -->
             <table cellpAdding=0 cellspacing=0 summary="">
               <tr>
-                <td colspan="4" class="tab-subhead1"><a href="#" id="ABFN2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN2" /></a> Time &amp; Money</td>
-              </tr>
+                <td colspan="4" class="tab-subhead1"><a href="#" id="A53m" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="F53m" /></a> Time &amp; Money</td>
+              </tr><tbody id="G53m" style="display:none">
               <tr>
                 <th> <div align="right">
                     <label for="account id">Project Start Date: </label>
@@ -767,7 +767,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <label for="account id3">Obligated Amount: </label>
                   </div></th>
                 <td align=left valign=middle>$100,000</td>
-              </tr>
+              </tr></tbody>
             </table>
           </div>
           <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
