https://test.kuali.org/jira/browse/KRAFUNC-57
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6651 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-distincome.html
+++ b/kra-awa-dev/abud-distincome.html
@@ -473,8 +473,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="tab-container" align="center" id="G03" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2> Income Details</h2>
-            </span><span class="subhead-right"><span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
-                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a> </span></span> </div>
+            </span><span class="subhead-right"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle"
+                                        onclick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a> </span> </div>
           <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col">&nbsp; </th>
