--- a/kra-awa-dev/abud-parameters.html
+++ b/kra-awa-dev/abud-parameters.html
@@ -378,7 +378,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G125" style="display: nonee;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Budget Periods</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table align="center" border="0" cellpadding="2" cellspacing="0" width="98%">
               <tbody _base_href="http://coeus-test.mit.edu/coeus42/coeuslite/wmc/budget/tiles/budgetSummaryTile.jsp">
                 <tr align="center" valign="top">
