--- a/kra-awa-dev/abud-rates.html
+++ b/kra-awa-dev/abud-rates.html
@@ -142,7 +142,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G02" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Public Service F &amp; A</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellspacing="0">
               <tbody _base_href="http://coeus-test.mit.edu/coeus42/coeuslite/wmc/budget/tiles/budgetProposalRateTile.jsp">
                 <tr>
@@ -294,7 +294,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G125" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Fringe Benefits</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellspacing="0">
               <tbody _base_href="http://coeus-test.mit.edu/coeus42/coeuslite/wmc/budget/tiles/budgetProposalRateTile.jsp">
                 <tr>
@@ -395,7 +395,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G4" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2><b>Vacation</b></h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellspacing="0">
               <tbody _base_href="http://coeus-test.mit.edu/coeus42/coeuslite/wmc/budget/tiles/budgetProposalRateTile.jsp">
                 <tr>
@@ -468,7 +468,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G222" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Other</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellspacing="0">
               <tbody _base_href="http://coeus-test.mit.edu/coeus42/coeuslite/wmc/budget/tiles/budgetProposalRateTile.jsp">
                 <tr>
