--- a/kra-awa-dev/abud-budactions.html
+++ b/kra-awa-dev/abud-budactions.html
@@ -110,7 +110,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="tab-container" align="center" id="G02" style="display: none;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Label</h2>
-          </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+          </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
           sdfg</div>
  <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
@@ -121,7 +121,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>        <div class="tab-container" align="center" id="G125" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Print Forms</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table  cellpadding="0" cellspacing="0"  summary="">
           
               <tbody >
@@ -179,7 +179,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="tab-container" align="center" id="G4" style="display: none;">
          <div class="h2-container"> <span class="subhead-left">
             <h2>Sub Award Budget</h2>
-          </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>    
+          </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>    
          <table align="center" border="0" cellpadding="2" cellspacing="0" width="98%">
            <tbody>
              <tr align="center" valign="top">
