--- a/kra-awa-dev/abud-budhierarcy.html
+++ b/kra-awa-dev/abud-budhierarcy.html
@@ -111,7 +111,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G02" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope=col>&nbsp;</th>
@@ -167,7 +167,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G125" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope=col>&nbsp;</th>
@@ -223,7 +223,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G03" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope=col>&nbsp;</th>
@@ -279,7 +279,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align="center" id="G4" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+              </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope=col>&nbsp;</th>
