--- a/kra-awa-dev/abud-modular.html
+++ b/kra-awa-dev/abud-modular.html
@@ -175,7 +175,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="tab-container" align="center" id="G127" style="display: none;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Direct Cost</h2>
-            </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+            </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
           <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
             <tr>
               <th width="35%"><div align="right">Direct Cost Less Consortium F&amp;A: </div></th>
@@ -206,7 +206,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div class="tab-container" align="center" id="G126" style="display: none;">
           <div class="h2-container"> <span class="subhead-left">
             <h2> F&amp;A</h2>
-            </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+            </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
           <table align="center" border="0" cellpadding="2" cellspacing="0" width="98%">
             <tbody _base_href="http://coeus-test.mit.edu/coeus42/coeuslite/wmc/budget/tiles/budgetSummaryTile.jsp">
               <tr align="center" valign="top">
